--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#29DB9B" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <meta name="title" content="IEEE Computer Society VIT Chennai">
+  <meta name="description"
+    content="IEEE Computer Society VIT Chennai is a zealous community of diverse minds striving to Learn, Create, (sometimes Break!), Develop, and Explore.">
+  <meta name="keywords"
+    content="ieeecsvitc, ieeecs, IEEE CS VIT Chennai, IEEE Computer Society, IEEE Computer Society VIT Chennai, Comsoc, comsoc.vitcc, Comsoc VITCC, HackHub, Paradox">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
