gtag, our vision added

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#29DB9B" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RY1V7RMEJW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-RY1V7RMEJW');
+  </script>
 
   <meta name="title" content="IEEE Computer Society VIT Chennai">
   <meta name="description"
     content="IEEE Computer Society VIT Chennai is a zealous community of diverse minds striving to Learn, Create, (sometimes Break!), Develop, and Explore.">
   <meta name="keywords"
-    content="ieeecsvitc, ieeecs, IEEE CS VIT Chennai, IEEE Computer Society, IEEE Computer Society VIT Chennai, Comsoc, comsoc.vitcc, Comsoc VITCC, HackHub, Paradox">
+    content="ieeecsvitc, ieeecs, IEEE CS VIT Chennai, IEEE Computer Society, IEEE Computer Society VIT Chennai, Comsoc, comsoc.vitcc, Comsoc VITCC, HackHub, Paradox, DataHub, CyberTrunk">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
@@ -31,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>IEEE Computer Society | VIT Chennai Student Chapter</title>
+  <title>IEEE Computer Society VIT Chennai</title>
 </head>
 
 <body>
