--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <meta name="description"
     content="IEEE Computer Society VIT Chennai is a zealous community of diverse minds striving to Learn, Create, (sometimes Break!), Develop, and Explore.">
   <meta name="keywords"
-    content="ieeecsvitc, ieeecs, IEEE CS VIT Chennai, IEEE Computer Society, IEEE Computer Society VIT Chennai, Comsoc, comsoc.vitcc, Comsoc VITCC, HackHub, Paradox, DataHub, CyberTrunk">
+    content="ieeecsvitc, ieeecs, IEEE CS VIT Chennai, IEEE CS VIT, IEEE Computer Society, IEEE Computer Society VIT Chennai, Comsoc, comsoc.vitcc, Comsoc VITCC, HackHub, Paradox, DataHub, CyberTrunk">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
